# OCR

./: .gitignore  README.md  api_server.py  bullet_resume_parser.py  check_models.py  error_rate.py  ocr_output_1.json  ocr_output_1000000008.json  ocr_output_1000000009.json  ocr_output_2.json  ocr_output_8c00e5b121248d30e6ba0846e8701808d8713d35.json  ocr_output_9660cd698cca3ac3.json  ocr_output_back.json  ocr_output_dd7df4cfc15d7a615ee112596477761f.json  ocr_output_document.json  ocr_output_food_service_resume_sample.json  ocr_output_hpc.json  ocr_output_image.json  ocr_output_new.json  ocr_output_temp_8c00e5b121248d30e6ba0846e8701808d8713d35.json  ocr_output_temp_後端.json  ocr_output_test.json  ocr_output_後端.json  ocr_processor.py  pyproject.toml  quickstart.py  resume_structured_8c00e5b121248d30e6ba0846e8701808d8713d35.json  resume_structured_dd7df4cfc15d7a615ee112596477761f.json  resume_structured_後端.json  resume_structurer.py
