[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-cognitiveservices-vision-computervision>=0.9.1",
    "genai>=2.1.0",
    "google>=3.0.0",
    "msrest>=0.7.1",
    "opencv-python>=4.13.0.90",
    "python-dotenv>=1.2.1",
]
